Fixed to look good on smaller monitor

--- a/app/assets/stylesheets/index.styl
+++ b/app/assets/stylesheets/index.styl
@@ -43,6 +43,9 @@ select
 textarea.form-control
   height 70px
 
+p
+  word-break keep-all
+
 img
-  margin-left 40px
+  // margin-left 40px
   margin-top 10px
